# duckdb-cubit

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
benchmarks/: benchmark.sh  cmd.md  script.py
cubit/: CMakeLists.txt  config.json
cubit/src/cubit/: table.cpp  table.h  table_lf.cpp  table_lf.h
cubit/src/fastbit/: const.h
cubit/src/nicolas/: nicolas.cpp  util.h
src/: cubit_bridge.cpp  cubit_extension.cpp  cubit_index.cpp  cubit_index_count.cpp  cubit_index_physical_create.cpp  cubit_index_plan.cpp  cubit_index_scan.cpp  cubit_optimize_scan.cpp  cubit_scalar_functions.cpp  cubit_thread_utils.cpp
src/include/: cubit.hpp  cubit_bridge.hpp  cubit_extension.hpp  cubit_index.hpp  cubit_index_count.hpp  cubit_index_physical_create.hpp  cubit_index_scan.hpp  cubit_thread_utils.hpp
test/sql/: cubit.test
test/sql/cubit_tests/: test_cubit_count.test
